# Secure-share-file-system

./: .gitignore
backend/: package-lock.json  package.json
backend/src/: db.ts  index.ts
db/migrations/: 01_initial_schema.sql
frontend/: package-lock.json
frontend/src/: App.tsx
kms-server/: Cargo.toml  README.md
kms-server/src/: main.rs  models.rs
kms-server/src/crypto/: chacha.rs
kms-server/src/db/: vault.rs
kms-server/src/handlers/: interrogate.rs  mod.rs
